[Improvement] getting ready for JDK 11